2001-10-05  Arturo Espinosa Aldama  <arturo@ximian.com>

	* xml.pl.in (xst_xml_print_request_end): don't use print_comment:
	this breaks the protocol. Not even using xst_xml_print_string, to
	avoid the terminator getting into the debugs or the archiver.

2001-10-05  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_version): Fixed hacky way to find X binary, save it
	in main hash to cache it.
	(x_get_active_screen): Much more robust, should work now in any
	case (X4, X3 with or without ServerLayout).
	(x_probe): Oops, forgot to uncomment this!

2001-10-03  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (logindefs_add_defaults): Return the hash we fill :)
	(read_logindefs): assign the return value to something, don't just
	pretend you're interested in it! :)

	* x.pl.in (x_parse_unique_int): Added check for uniqueness.
	(x_parse_unique_string): Ditto.

	* users-conf.in: Override new values found from logindefs
	and not in profiles. Removed xst_progress remains.
	Added reporting. Backups all files it (remotely) touches.

2001-10-02  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (list_ifaces): directive that lists
	instantaneous info about all interfaces (ifconfig -a).

	* network.pl.in (xst_network_interfaces_get_info): Collect
	more info: active and dev, and include inactive interfaces.

2001-10-02  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Use full paths to XFree86, don't try to depend on links.
	(x_update_list_string): Emptry string is valid string! doh!
	(x_add_unique_string): Ditto.

	* users-conf.in: Rewrote profiles and login.defs stuff.
	Removed/exchanged all old cruft so now it seems more like
	other 'up-to-date' backends.

	* xml.pl.in (xst_xml_format_pcdata): Don't use if ($name) conditions
	if 0 or empty string are valid values. Use if (defined ($name))
	instead.
	(xst_xml_print_comment): Implement.

2001-10-01  Arturo Espinosa Aldama  <arturo@ximian.com>

	* display-conf.in: Added mandrake-7.2 to the list of supported
	platforms.
