@@ -387,11 +387,17 @@ sub xst_network_interfaces_get_info
       $ {$ifaces{$dev}}{"addr"}    = $1 if /addr:([^ \t]+)/i;
       $ {$ifaces{$dev}}{"mask"}    = $1 if /mask:([^ \t]+)/i;
       $ {$ifaces{$dev}}{"bcast"}   = $1 if /bcast:([^ \t]+)/i;
-      $ {$ifaces{$dev}}{"active"}  = 1  if /^UP[ \t]/;
+      $ {$ifaces{$dev}}{"active"}  = 1  if /^UP[ \t]/i;
     }
   }
+  
   &xst_file_close ($fd);
 
+  foreach $dev (keys %ifaces)
+  {
+    $ {$ifaces{$dev}}{"active"} = 0 if $ {$ifaces{$dev}}{"addr"} eq undef;
+  }
+  
   &xst_report_leave ();
   return \%ifaces;
 }
